# DownloadsJanitor

./: CMakeLists.txt  README.md
config/: rules.json
scripts/: RunDownloadsJanitorHidden.vbs
src/: ConfigParser.cpp  ConfigParser.hpp  FileMover.cpp  FileMover.hpp  main.cpp
